--- a/Views/Account/SearchUser.cshtml
+++ b/Views/Account/SearchUser.cshtml
@@ -1,97 +1,104 @@
+
 @model IEnumerable<LoginFPTBook.Data.ApplicationUser>
 
 @{
-    ViewData["Title"] = "SearchUser";
+    ViewData["Title"] = "Result for search";
 }
 <style>
-    h3 {
+    h3{
         padding-top: 10px;
     }
-
     .searching .search-container {
-        float: right;
-    }
-
-    .searching input[type=text] {
-        padding: 6px;
-        margin-top: 8px;
-        font-size: 14px;
-        border: none;
-    }
-
-    .searching .search-container button {
-        float: right;
-        padding: 6px 10px;
-        margin-top: 8px;
-        margin-right: 16px;
-        background: #fff;
-        font-size: 14px;
-        border: none;
-        cursor: pointer;
-    }
-
-    .searching .search-container button:hover {
-        background: #25aab3;
-    }
+  float: right;
+}
+ 
+.searching input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 14px;
+  border: none;
+}
+ 
+.searching .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #fff;
+  font-size: 14px;
+  border: none;
+  cursor: pointer;
+}
+ 
+.searching .search-container button:hover {
+  background: #25aab3;
+}
 </style>
 @{
-    var data = ViewData["role"] as IList<string>;
+    var data = ViewData["role"] as IList<string>;    
     int count = Convert.ToInt32(ViewData["count"]);
 }
-<div id="main">
-    <div className="page-heading pb-2 mt-4 mb-2 ">
-        <h3>Result for search: </h3>
-        @* <a asp-controller="Account" class="btn btn-outline-primary" asp-action="createOwnerAccount">Create Owner
-        Account</a> *@
-    </div>
-    <div class="searching">
-        <div class="search-container">
-            <form asp-controller="Account" asp-action="SearchUser">
-                <input type="text" placeholder="Search for Email..." name="search">
-                <button type="submit"><i class="fa fa-search"></i></button>
-            </form>
-        </div>
-    </div>
-
-    <div class="page-content">
-        <div class="container mb-3">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th scope="col">UserID</th>
-                        <th scope="col">Fullname</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">BirthDate</th>
-                        <th scope="col">PhoneNumber</th>
-                        <th scope="col">Address</th>
-                        <th scope="col">Role</th>
-                        <th scope="col">Status</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>@item.Id</td>
-                            <td>@item.User_Fullname</td>
-                            <td>@item.Email</td>
-                            <td>@item.User_Birthdate</td>
-                            <td>@item.PhoneNumber</td>
-                            <td>@item.User_Address</td>
-                            <td>Chưa xử lý được!!!</td>
-                            @if (@item.User_Status == 1)
+<div id="main">     
+                <div className="page-heading pb-2 mt-4 mb-2 ">
+                    <h3>Result for search</h3> 
+                        <a asp-controller="Account" asp-action="Index" type="button" class="btn btn-outline-primary">Back to Index</a>
+                </div>
+                <div class="searching">
+                    <div class="search-container">
+                        <form asp-controller="Account" asp-action="SearchUser">
+                            <input type="text" placeholder="Search for Email..." name="search">
+                            <button type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                    </div>
+                </div>
+                
+                <div class="page-content">
+                <div class="container mb-3">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                            <th scope="col">UserID</th>
+                            <th scope="col">Fullname</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">BirthDate</th>
+                            <th scope="col">PhoneNumber</th>
+                            <th scope="col">Address</th>
+                            <th scope="col">Role</th>
+                            <th scope="col">Status</th>
+                            <th></th>
+                            </tr>
+                        </thead>
+                        <tbody> 
+                            @for (var i = 0; i < count; i++)
                             {
-                                <td>Avilable</td>
-                            }
-                            else
-                            {
-                                <td>Unavilable</td>
-                            }
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    </div>
+                                
+                                <tr>
+                                    <td>@Model.ElementAt(i).Id</td>
+                                    <td>@Model.ElementAt(i).User_Fullname</td>
+                                    <td>@Model.ElementAt(i).Email</td>
+                                    <td>@Model.ElementAt(i).User_Birthdate</td>
+                                    <td>@Model.ElementAt(i).PhoneNumber</td>
+                                    <td>@Model.ElementAt(i).User_Address</td> 
+                                    <td>@data[i]</td>
+                                    @if (@Model.ElementAt(i).User_Status == 0)
+                                    {
+                                        <td>
+                                            Unavailable
+                                        </td>
+                                    }
+                                    else{
+                                        <td>
+                                            Available
+                                        </td>
+                                    }
+                                    
+                                    <td>
+                                        <a asp-controller="Account" asp-action="updateAccount" asp-route-id="@Model.ElementAt(i).Id" class="btn btn-outline-primary rounded-pill"> Update </a>
+                                    </td>
+                                </tr> 
+                            }                                         
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 </div>
