--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -22,7 +22,7 @@
     <div class="container">
         <form asp-action="Create" id="addBookForm" enctype="multipart/form-data" method="post">
             <h2>Add New Book</h2>
-            <a asp-controller="Book" asp-action="Index" class="w-10 btn btn-lg btn-primary">Back</a>
+            <a asp-controller="Book" asp-action="Index" class="w-10 btn btn-lg btn-primary">Back to Index</a>
             <hr/>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @* <div class="form-floating">
