--- a/Views/Publisher/Create.cshtml
+++ b/Views/Publisher/Create.cshtml
@@ -20,7 +20,7 @@
 <div class="row">
     <div class="container">
         <form id="addPublisherForm" asp-action="Create" method="post">
-            <a asp-action="Index" class="w-10 btn btn-lg btn-primary">Back</a>
+            <a asp-action="Index" class="w-10 btn btn-lg btn-primary">Back to Index</a>
             <h2>Add New Pulisher</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
