--- a/Views/Publisher/Edit.cshtml
+++ b/Views/Publisher/Edit.cshtml
@@ -19,9 +19,9 @@
 
 <div class="row">
     <div class="container">
-        <form id="addPublisherForm" asp-action="Create" method="post">
-            <a asp-action="Index" class="w-10 btn btn-lg btn-primary">Back</a>
-            <h2>Add New Pulisher</h2>
+        <a asp-controller="Publisher" asp-action="Index" class="w-10 btn btn-lg btn-primary">Back to Index</a>
+            <h2>Update Publisher</h2>
+        <form id="addPublisherForm" asp-route-id="@Model.Publisher_ID" asp-action="Edit" method="post">
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <br>
@@ -52,7 +52,7 @@
             </div>
             <br>
              <div class="btnAdd">
-                <button id="addSubmit" type="submit" class="w-10 btn btn-lg btn-primary">Add</button>
+                <button id="addSubmit" type="submit" class="w-10 btn btn-lg btn-primary">Update</button>
              </div>              
         </form>
     </div>
