--- a/Views/Publisher/Index.cshtml
+++ b/Views/Publisher/Index.cshtml
@@ -37,8 +37,8 @@
                                 <td>Unavailable</td>
                             }
                             <td>
-                                <a asp-controller="Publisher" asp-action="Edit" asp-route-id="@item.Publisher_ID" class="btn btn-outline-primary rounded-pill"> Update </a>
-                                <a asp-controller="Publisher" asp-action="Delete" asp-route-id="@item.Publisher_ID" class="btn btn-outline-primary rounded-pill" onclick="return confirm('Are sure wants to delete?');">Delete</a>
+                                <a asp-controller="Publisher" asp-action="Edit" 
+                                asp-route-id="@item.Publisher_ID" class="btn btn-outline-primary rounded-pill"> Update </a>
                             </td>
                         </tr>
                     }
