--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -16,7 +16,7 @@
                         <div class="col-lg-7 p-5">
                             <div class="product_description">
                                 <h2 class="card-title">Name: @Model.Book_Name</h2>
-                                <h4 class="card-title">Price: @Model.Book_Price</h4>
+                                <h4 class="card-title">Price: @Model.Book_Price$</h4>
                                 <p>Number of Page: @Model.Book_NoOfPages</p>
                                 <p>Publish date: @Model.Book_PublishDate</p>
                                 <p>Quantity: @Model.Book_Quantity</p>
