--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -32,8 +32,8 @@
                             <td>@item.Book_Name</td>
                             <td>@item.Category.Category_Name</td>
                             <td>@item.Book_AuthorName</td>
-                            <td>@item.Book_Price</td>
-                            <td>@item.Book_SalePrice</td>
+                            <td>@item.Book_Price$</td>
+                            <td>@item.Book_SalePrice$</td>
                             <td>@item.Book_Quantity</td>
                             @if (@item.Book_Status == 1)
                             {
