--- a/Views/Category/Edit.cshtml
+++ b/Views/Category/Edit.cshtml
@@ -38,7 +38,7 @@
             </div>
             <br>
             <div class="form-group">
-                <label asp-for="Category_Status" class="control-label"></label><br>
+                <label>Status</label><br>
                 @if(Model.Category_Status == 1){
                     <input type="radio" id="contactChoice1" value="1" asp-for="Category_Status" checked/>
                     <label for="contactChoice1">Available</label>
