--- a/Views/Book/Edit.cshtml
+++ b/Views/Book/Edit.cshtml
@@ -21,7 +21,7 @@
 <div class="row">
     <div class="container">
         <form asp-action="Edit" id="addBookForm" enctype="multipart/form-data" method="post">
-            <h2>Add New Book</h2>
+            <h2>Update Book</h2>
             <a asp-controller="Book" asp-action="Index" class="w-10 btn btn-lg btn-primary">Back</a>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
