--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,12 +29,13 @@
                 @if (User.Identity.IsAuthenticated)
                 {
                   <a asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a>
-                  <form class="form-inline" asp-area="Identity"
+                  <form  asp-area="Identity"
                                 asp-page="/Account/Logout"
                                 asp-route-returnUrl="@Url.Action("Index",
                                 "Home", new { area = "" })">
-                                        <button type="submit" class=" btn
-                                    btn-link" id="logoutandlogin">Logout</button>
+                                        <button type="submit" class="btn"
+                                        style="font-size: 2rem; margin-left: 1.5rem; color: var(--black); cursor: pointer; text-decoration: none;">
+                                        LogOut</button> 
                                     </form>
                 }
                 else{
