--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -53,8 +53,12 @@
                     
                 }
                 else{
-                    <input type="radio" asp-for="Input.User_Gender" value="Male">
-                    <input type="radio" asp-for="Input.User_Gender" value="Female" checked> 
+                    <div class="gender">
+                        <input type="radio" asp-for="Input.User_Gender" value="Male" >Male
+                        <p style="color: #5795b3;">..................</p><br><br> 
+                         
+                        <input type="radio" asp-for="Input.User_Gender" value="Female" checked>Female
+                    </div> 
                 }             
                 <span asp-validation-for="Input.User_Gender" class="text-danger"></span>
             </div>
