--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -52,6 +52,7 @@
                         <option value="@item.Category_ID">@item.Category_Name</option>
                     }
                 </select>
+                <span asp-validation-for="Category_ID" class="text-danger"></span>
             </div><br>
             <div class="form-floating">
                 <select asp-for="Publisher_ID" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" style="font-size: 9px">
@@ -61,6 +62,7 @@
                         <option value="@item.Publisher_ID">@item.Publisher_Name</option>
                     }
                 </select>
+                <span asp-validation-for="Publisher_ID" class="text-danger"></span>
             </div><br>
             <div class="form-floating">
                 <input asp-for="Book_Description" class="form-control" aria-required="true"/>
@@ -77,7 +79,7 @@
             <div class="form-floating">
                 <input type="number" asp-for="Book_Quantity" class="form-control" aria-required="true" />
                 <label asp-for="Book_Quantity">Quantity</label>
-                <span asp-validation-for="Book_NoOfPages" class="text-danger"></span>
+                <span asp-validation-for="Book_Quantity" class="text-danger"></span>
             </div><br>
             <div class="form-floating">
                 <input asp-for="Book_Price" class="form-control" aria-required="true" />
@@ -107,7 +109,7 @@
                 @* <input type="file" name="image" id="image" class="form-control" value="" style="width:200px"> *@
                 @* <label asp-for="Book_Image" class="control-label">Book Image</label> *@
                 <input type="file" class="form-control" asp-for="Book_Image" >
-                <span asp-validation-for="Book_SalePrice" class="text-danger"></span>
+                <span asp-validation-for="Book_Image" class="text-danger"></span>
             </div><br>
             <div class="form-group">
                 <label asp-for="Book_PublishDate" class="control-label">Publish Date</label>
