--- a/Views/Book/Edit.cshtml
+++ b/Views/Book/Edit.cshtml
@@ -18,10 +18,16 @@
         text-align: center;
     }
 </style>
+    @if (@TempData["errorDate"] != null)
+    {
+        <script type="text/javascript">
+            alert("@TempData["errorDate"]");
+        </script> 
+    }
 <div class="row">
     <div class="container">
         <form asp-action="Edit" id="addBookForm" enctype="multipart/form-data" method="post">
-            <h2>Add New Book</h2>
+            <h2>Update Book</h2>
             <a asp-controller="Book" asp-action="Index" class="w-10 btn btn-lg btn-primary">Back to Index</a>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -76,7 +82,7 @@
             <div class="form-floating">
                 <input type="number" asp-for="Book_Quantity" class="form-control" aria-required="true" />
                 <label asp-for="Book_Quantity">Quantity</label>
-                <span asp-validation-for="Book_NoOfPages" class="text-danger"></span>
+                <span asp-validation-for="Book_Quantity" class="text-danger"></span>
             </div><br>
             <div class="form-floating">
                 <input asp-for="Book_Price" class="form-control" aria-required="true" />
