--- a/Views/Book/Details.cshtml
+++ b/Views/Book/Details.cshtml
@@ -22,6 +22,8 @@
                                 <p>Quantity: @Model.Book_Quantity</p>
                                 <p>Category: @Model.Category.Category_Name</p>
                                 <p>Publisher: @Model.Publisher.Publisher_Name</p>
+                                <H4>Description</H4>
+                                <p>@Model.Book_Description</p>
                                 <hr class="singleline">
                                 <div class="card-body align-self-center">
                                     @if (@Model.Book_Quantity > 0)
