--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -39,7 +39,7 @@
                 </div>
                 <div class="btnLogin">
                     <button id="login-submit" type="submit" class="w-50 btn btn-lg btn-primary">Log in</button>
-                    <button id="cancel-submit" type="submit" class="w-50 btn btn-lg btn-primary">Cancel</button>
+                    <a asp-controller="Home" asp-action="Index" id="cancel-submit"  class="w-50 btn btn-lg btn-primary">Cancel</a>
                 </div>
                 <div >
                     <br>
