--- a/Views/Book/Create.cshtml
+++ b/Views/Book/Create.cshtml
@@ -31,7 +31,7 @@
             <span class="text-danger"></span>
             </div><br> *@
             @if(TempData["msg"] != null){
-                <p>@TempData["msg"]</p>
+                <p class="text-danger">@TempData["msg"]</p>
             }
             <div class="form-floating">
                 <input asp-for="Book_Name" class="form-control" aria-required="true" />
