--- a/Views/Publisher/Edit.cshtml
+++ b/Views/Publisher/Edit.cshtml
@@ -15,12 +15,17 @@
         display: flex;
         text-align: center;
     }
+    #title{
+        padding-left: 150px;
+    }
 </style>
 
 <div class="row">
     <div class="container">
-        <a asp-controller="Publisher" asp-action="Index" class="w-10 btn btn-lg btn-primary">Back to Index</a>
+        <div id="title">
             <h2>Update Publisher</h2>
+            <a id="btn-back" asp-controller="Publisher" asp-action="Index" class="w-10 btn btn-lg btn-primary">Back to Index</a>
+        </div>
         <form id="addPublisherForm" asp-route-id="@Model.Publisher_ID" asp-action="Edit" method="post">
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
