--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                 </div>
               </div>
             }
-
+            <a asp-controller="Home" asp-action="Help">Help</a>
         </nav>
     </div>
 
