make something better

--- a/Views/Publisher/Index.cshtml
+++ b/Views/Publisher/Index.cshtml
@@ -30,7 +30,7 @@
                             <td>@item.Publisher_Telephone</td>
                             @if (@item.Publisher_Status == 1)
                             {
-                                <td>Avilable</td>
+                                <td>Available</td>
                             }
                             else
                             {
