--- a/Views/Book/Edit.cshtml
+++ b/Views/Book/Edit.cshtml
@@ -31,6 +31,9 @@
             <a asp-controller="Book" asp-action="Index" class="w-10 btn btn-lg btn-primary">Back to Index</a>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @if(TempData["msg"] != null){
+                <p class="text-danger">@TempData["msg"]</p>
+            }
             <div class="form-floating">
                 <input asp-for="Book_ID" class="form-control" aria-required="true" readonly/>
                 <label asp-for="Book_ID">Book ID</label>
