--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -31,7 +31,7 @@
                                 </div>
                                 <div class="content">
                                     <h3>@item.Book_Name</h3>
-                                    <div class="price">$@item.Book_SalePrice<span>$@item.Book_Price</span></div>
+                                    <div class="price">$@item.Book_SalePrice</div>
                                     <a class="btn" asp-controller="Book" asp-action="Details" asp-route-id="@item.Book_ID">View Detail</a>
                                 </div>
                             </div>
