--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                 </div>
               </div>
             }
-            <a asp-controller="Home" asp-action="Help">Help</a>
+            @* <a asp-controller="Home" asp-action="Help">Help</a> *@
         </nav>
     </div>
 
@@ -143,7 +143,7 @@
         </ul>
         <ul class="box">
           <li class="link_name">Services</li>
-          <li><a href="#">App design</a></li>
+          <li><a asp-controller="Home" asp-action="Help">Help Screen</a></li>
           <li><a href="#">Web design</a></li>
           <li><a href="#">Logo design</a></li>
           <li><a href="#">Banner design</a></li>
